Fixed responsive problems on mobile

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -5,11 +5,11 @@
 html,
 body,
 #root{
-  height: 100%;
+  height: 100svh;
   padding: 0;
   margin: 0;
   text-align: start;
-  overflow: hidden;
+  width: 100%;
 }
 
 @layer base {
@@ -77,8 +77,8 @@ body,
 }
 
 .leaflet-container {
+  height: 100vh;
   width: 100%;
-  height: 100%;
 }
  
 @layer base {
